[package]
name = "custom_exporter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log                      = "0.4.14"
env_logger               = "0.8.4"
clap                     = "2.33.0"
serde_json               = "1.0"
serde                    = { version       = "1.0", features = ["derive"] }
serde_derive             = "1.0"
thiserror		 = "1.0"
hyper                    = { version       = "0.14", features = ["stream"] }
tokio                    = { version 	   = "1.0", features = ["macros", "rt"] }
prometheus_exporter= { version  = "0.8.5"}
regex			 = "1.5"
reqwest = { version = "0.11", features = ["blocking"] }
rand = "0.8"
futures = "0.1.3"
fs_extra = "1.2.0"
notify-rust = "4"
sysinfo = "0.26.2"